2006-07-16  Nick Treleaven  <nick.treleaven@btinternet.com>

 * doc/scikeybinding.docbook, doc/geany.docbook:
   Added Scintilla keyboard commands appendix taken from the SciTE
   documentation section 'Keyboard Commands'.


2006-07-15  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/keybindings.c, src/sci_cb.c:
   Show auto completion list immediately when called by a keybinding.
 * geany.glade, src/interface.c, src/prefs.c, src/geany.h,
   src/keyfile.c, src/utils.c:
   Toolbar items for file operations can also be hidden.


2006-07-15  Nick Treleaven  <nick.treleaven@btinternet.com>

 * keybindings.c, keybindings.h: Add keybinding for Find in files.
 * doc/geany.docbook: Updated Make command names and keybindings.
 * src/vte.c: Fix applying vte settings on startup and prevent the
              message window vertical scrollbar being hidden.


2006-07-14  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/search.c: Give accurate message on finishing finding in files.
 * src/callbacks.c: Use locale encoding for Find in files and
                    remember previous searches.


2006-07-14  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/filetypes.c, src/highlighting.c, tagmanager/tm_tag.c,
   tagmanager/tm_workspace.c: Fixed autocompletion for filetype C++.
 * src/utils.c: Removed unneeded functions:
   utils_glist_strings_free() and utils_glist_from_string().
 * src/encodings.c: Fixed wrong charset detection on UTF-8
                    (and maybe other) systems.


2006-07-13  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/build.c, src/interface.c, src/utils.c, src/utils.h, src/geany.h,
   src/msgwindow.c, src/msgwindow.h, src/callbacks.c, src/callbacks.h,
   src/keyfile.c, src/search.c, src/search.h, src/prefs.c,
   src/dialogs.c, src/main.c, src/dialogs.h, src/Makefile.am,
   geany.glade: Added basic Find in files search functionality.


2006-07-11  Enrico Tröger  <enrico.troeger@uvena.de>
