@@ -33,11 +33,25 @@
 #define GEANY_ENCODINGS_H
 
 
+typedef enum
+{
+	NONE = 0,
+	WESTEUROPEAN,
+	EASTEUROPEAN,
+	EASTASIAN,
+	ASIAN,
+	MIDDLEEASTERN,
+	UNICODE,
+
+	GEANY_ENCODING_GROUPS_MAX
+} GeanyEncodingGroup;
+
 typedef struct
 {
-	gint   idx;
-	gchar *charset;
-	gchar *name;
+	gint   				 idx;
+	GeanyEncodingGroup   group;
+	gchar				*charset;
+	gchar				*name;
 } GeanyEncoding;
 
 
@@ -61,75 +75,70 @@ void encodings_init(void);
 
 typedef enum
 {
+	GEANY_ENCODING_ISO_8859_14,
+	GEANY_ENCODING_ISO_8859_7,
+	GEANY_ENCODING_WINDOWS_1253,
+	GEANY_ENCODING_ISO_8859_10,
+	GEANY_ENCODING_ISO_8859_3,
+	GEANY_ENCODING_IBM_850,
+	GEANY_ENCODING_ISO_8859_1,
+	GEANY_ENCODING_ISO_8859_15,
+	GEANY_ENCODING_WINDOWS_1252,
 
-  GEANY_ENCODING_ISO_8859_1,
-  GEANY_ENCODING_ISO_8859_2,
-  GEANY_ENCODING_ISO_8859_3,
-  GEANY_ENCODING_ISO_8859_4,
-  GEANY_ENCODING_ISO_8859_5,
-  GEANY_ENCODING_ISO_8859_6,
-  GEANY_ENCODING_ISO_8859_7,
-  GEANY_ENCODING_ISO_8859_8,
-  GEANY_ENCODING_ISO_8859_8_I,
-  GEANY_ENCODING_ISO_8859_9,
-  GEANY_ENCODING_ISO_8859_10,
-  GEANY_ENCODING_ISO_8859_13,
-  GEANY_ENCODING_ISO_8859_14,
-  GEANY_ENCODING_ISO_8859_15,
-  GEANY_ENCODING_ISO_8859_16,
+	GEANY_ENCODING_ISO_8859_4,
+	GEANY_ENCODING_ISO_8859_13,
+	GEANY_ENCODING_WINDOWS_1257,
+	GEANY_ENCODING_IBM_852,
+	GEANY_ENCODING_ISO_8859_2,
+	GEANY_ENCODING_WINDOWS_1250,
+	GEANY_ENCODING_IBM_855,
+	GEANY_ENCODING_ISO_8859_5,
+	GEANY_ENCODING_ISO_IR_111,
+	GEANY_ENCODING_KOI8_R,
+	GEANY_ENCODING_WINDOWS_1251,
+	GEANY_ENCODING_CP_866,
+	GEANY_ENCODING_KOI8_U,
+	GEANY_ENCODING_ISO_8859_16,
 
-  GEANY_ENCODING_UTF_8,
-  GEANY_ENCODING_UTF_16,
-  GEANY_ENCODING_UCS_2,
-  GEANY_ENCODING_UCS_4,
+	GEANY_ENCODING_IBM_864,
+	GEANY_ENCODING_ISO_8859_6,
+	GEANY_ENCODING_WINDOWS_1256,
+	GEANY_ENCODING_IBM_862,
+	GEANY_ENCODING_ISO_8859_8_I,
+	GEANY_ENCODING_WINDOWS_1255,
+	GEANY_ENCODING_ISO_8859_8,
 
-  GEANY_ENCODING_ARMSCII_8,
-  GEANY_ENCODING_BIG5,
-  GEANY_ENCODING_BIG5_HKSCS,
-  GEANY_ENCODING_CP_866,
+	GEANY_ENCODING_ARMSCII_8,
+	GEANY_ENCODING_GEOSTD8,
+	GEANY_ENCODING_TIS_620,
+	GEANY_ENCODING_IBM_857,
+	GEANY_ENCODING_WINDOWS_1254,
+	GEANY_ENCODING_ISO_8859_9,
+	GEANY_ENCODING_TCVN,
+	GEANY_ENCODING_VISCII,
+	GEANY_ENCODING_WINDOWS_1258,
 
-  GEANY_ENCODING_EUC_JP,
-  GEANY_ENCODING_EUC_KR,
-  GEANY_ENCODING_EUC_TW,
+	GEANY_ENCODING_UTF_8,
+	GEANY_ENCODING_UTF_16,
+	GEANY_ENCODING_UCS_2,
+	GEANY_ENCODING_UCS_4,
 
-  GEANY_ENCODING_GB18030,
-  GEANY_ENCODING_GB2312,
-  GEANY_ENCODING_GBK,
-  GEANY_ENCODING_GEOSTD8,
-  GEANY_ENCODING_HZ,
+	GEANY_ENCODING_GB18030,
+	GEANY_ENCODING_GB2312,
+	GEANY_ENCODING_GBK,
+	GEANY_ENCODING_HZ,
+	GEANY_ENCODING_BIG5,
+	GEANY_ENCODING_BIG5_HKSCS,
+	GEANY_ENCODING_EUC_TW,
+	GEANY_ENCODING_EUC_JP,
+	GEANY_ENCODING_ISO_2022_JP,
+	GEANY_ENCODING_SHIFT_JIS,
+	GEANY_ENCODING_EUC_KR,
+	GEANY_ENCODING_ISO_2022_KR,
+	GEANY_ENCODING_JOHAB,
+	GEANY_ENCODING_UHC,
 
-  GEANY_ENCODING_IBM_850,
-  GEANY_ENCODING_IBM_852,
-  GEANY_ENCODING_IBM_855,
-  GEANY_ENCODING_IBM_857,
-  GEANY_ENCODING_IBM_862,
-  GEANY_ENCODING_IBM_864,
-
-  GEANY_ENCODING_ISO_2022_JP,
-  GEANY_ENCODING_ISO_2022_KR,
-  GEANY_ENCODING_ISO_IR_111,
-  GEANY_ENCODING_JOHAB,
-  GEANY_ENCODING_KOI8_R,
-  GEANY_ENCODING_KOI8_U,
-
-  GEANY_ENCODING_SHIFT_JIS,
-  GEANY_ENCODING_TCVN,
-  GEANY_ENCODING_TIS_620,
-  GEANY_ENCODING_UHC,
-  GEANY_ENCODING_VISCII,
-
-  GEANY_ENCODING_WINDOWS_1250,
-  GEANY_ENCODING_WINDOWS_1251,
-  GEANY_ENCODING_WINDOWS_1252,
-  GEANY_ENCODING_WINDOWS_1253,
-  GEANY_ENCODING_WINDOWS_1254,
-  GEANY_ENCODING_WINDOWS_1255,
-  GEANY_ENCODING_WINDOWS_1256,
-  GEANY_ENCODING_WINDOWS_1257,
-  GEANY_ENCODING_WINDOWS_1258,
-
-  GEANY_ENCODINGS_MAX
-
+	GEANY_ENCODINGS_MAX
 } GeanyEncodingIndex;
 
 
